# LIBREMM

./: CMakeLists.txt  README.md  changelog  install.sh
icons/: icons.qrc
inc/: backoffice.h  iconv.hpp  playlistmodal.h
qml/: mainpage.qml  qml.qrc
qml/contents/: BottomTools.qml  MMPlayer.qml  MediaDropArea.qml  Playlist.qml  Shortcuts.qml  SubSettings.qml  TopTools.qml  VolumePanel.qml
src/: backoffice.cpp  main.cpp  playlistmodal.cpp
